--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.smb1">
+    <permission android:name="com.example.myapp.PERMISSION"/>
+    <uses-permission android:name="com.example.myapp.PERMISSION"/>
 
     <application
         android:allowBackup="true"
@@ -17,7 +19,7 @@
             android:exported="false" />
         <activity
             android:name=".Activity.ItemEditActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Activity.ShoppingListActivity"
             android:exported="false"
